src/test/ui/error-codes/E0277.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/E0277.rs:11:6
   |
LL | fn f(p: Path) { }
   |      ^ doesn't have a size known at compile-time
   |
   = help: within `Path`, the trait `Sized` is not implemented for `[u8]`
   = note: required because it appears within the type `Path`
   = help: unsized fn params are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | fn f(&p: Path) { }
   |      ^

error[E0277]: the trait bound `i32: Foo` is not satisfied
  --> $DIR/E0277.rs:15:15
   |
LL | fn some_func<T: Foo>(foo: T) {
   |                 --- required by this bound in `some_func`
...
LL |     some_func(5i32);
   |               ^^^^ the trait `Foo` is not implemented for `i32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
